pkg/fs/policies/disallow-add-capabilities.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  annotations:
    meta.helm.sh/release-name: kyverno
    meta.helm.sh/release-namespace: kyverno
    pod-policies.kyverno.io/autogen-controllers: DaemonSet,Deployment,Job,StatefulSet,CronJob
    policies.kyverno.io/category: Pod Security Standards (Default)
    policies.kyverno.io/description:
      Capabilities permit privileged actions without
      giving full root access. Adding capabilities beyond the default set must not
      be allowed.
  name: disallow-add-capabilities
spec:
  background: true
  rules:
    - exclude:
        resources:
          namespaces:
            - kube-system
            - linkerd-*
            - ingress-*
            - cattle-*
            - calico-system
            - tigera-operator
      match:
        resources:
          kinds:
            - Pod
      name: capabilities
      validate:
        message:
          Adding of additional capabilities beyond the default set is not allowed.
          The fields spec.containers[*].securityContext.capabilities.add and  spec.initContainers[*].securityContext.capabilities.add
          must be empty.
        pattern:
          spec:
            =(initContainers):
              - =(securityContext):
                  =(capabilities): {}
            containers:
              - =(securityContext):
                  =(capabilities): {}
                name: "!linkerd-proxy"
    - exclude:
        resources:
          namespaces:
            - kube-system
            - linkerd-*
            - ingress-*
            - cattle-*
            - calico-system
            - tigera-operator
      match:
        resources:
          kinds:
            - DaemonSet
            - Deployment
            - Job
            - StatefulSet
      name: autogen-capabilities
      validate:
        message:
          Adding of additional capabilities beyond the default set is not allowed.
          The fields spec.containers[*].securityContext.capabilities.add and  spec.initContainers[*].securityContext.capabilities.add
          must be empty.
        pattern:
          spec:
            template:
              spec:
                =(initContainers):
                  - =(securityContext):
                      =(capabilities): {}
                containers:
                  - =(securityContext):
                      =(capabilities): {}
                    name: "!linkerd-proxy"
    - exclude:
        resources:
          namespaces:
            - kube-system
            - linkerd-*
            - ingress-*
            - cattle-*
            - undistro-system
      match:
        resources:
          kinds:
            - CronJob
      name: autogen-cronjob-capabilities
      validate:
        message:
          Adding of additional capabilities beyond the default set is not allowed.
          The fields spec.containers[*].securityContext.capabilities.add and  spec.initContainers[*].securityContext.capabilities.add
          must be empty.
        pattern:
          spec:
            jobTemplate:
              spec:
                template:
                  spec:
                    =(initContainers):
                      - =(securityContext):
                          =(capabilities): {}
                    containers:
                      - =(securityContext):
                          =(capabilities): {}
                        name: "!linkerd-proxy"
  validationFailureAction: enforce
